# OpenGLStudy

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
include/glad/: glad.h
libs/mingw/: glad.c
